--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 <body>
 
   <!-- Your code here -->
+  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg"></img>
+  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="Lion picture"></img>
+  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="Lion picture" title="Rawr"></img>
 
 </body>
 </html>
